--- a/html00/pagina03.html
+++ b/html00/pagina03.html
@@ -4,44 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina 03</title>
+    <title>Página 04</title>
 </head>
 
 <body>
+    <h1> Random Picture</h1>
+    <img src="" alt="john">
+    <p>john</p>
+    <img src="" alt="jane">
+    <p>jane</p>
 
-    <button onclick="loadXMLDoc()">Ejecutar función</button>
-    <table id="demo"></table>
 
-    <script>
-        // Función principal usando async/await y fetch
-        const loadXMLDoc = async () => {
-            try {
-                const response = await fetch('cd_catalog.xml');
-                const text = await response.text();
-                const parser = new DOMParser();
-                const xmlDoc = parser.parseFromString(text, "application/xml");
-                const cds = xmlDoc.getElementsByTagName("CD");
-                myFunction(cds);
-            } catch (error) {
-                console.error('Error loading XML:', error);
-            }
-        };
-
-        const myFunction = (cds) => {
-            let table = "<tr><th>Artist</th><th>Title</th></tr>";
-            Array.from(cds).forEach(cd => {
-                const artist = cd.getElementsByTagName("ARTIST")[0]?.textContent || "N/A";
-                const title = cd.getElementsByTagName("TITLE")[0]?.textContent || "N/A";
-                table += `<tr><td>${artist}</td><td>${title}</td></tr>`;
-            });
-            document.getElementById("demo").innerHTML = table;
-        };
-
-    </script>
-
-</body>
-
-</html>
-</body>
+    <h1>Random Picture</h1>
+    <figure>
+        <img src="https://picsum.photos/id/1/200/200" alt="x">
+        <figcaption>john</figcaption>
+    </figure>
+    <!-- <figure> -->
+    <img src="https://picsum.photos/id/2/200/200" alt="y">
+    <!-- <figcaption> -->
+    jane
+    <!-- </figcaption> -->
+    <!-- </figure> -->
 
 </html>
