--- a/html00/pagina05.html
+++ b/html00/pagina05.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Página 05</title>
     <style>
         img {
             box-shadow: 10px 10px 20px red;
