--- a/html00/pagina06.html
+++ b/html00/pagina06.html
@@ -31,7 +31,7 @@
             const url = `https://picsum.photos/id/${id}/200/200/`
             return `
                 <figure>
-                    <img src="${url}" alt="" class="pendejo">
+                    <img src="${url}" alt="" class="redonda">
                     <figcaption>${name}</figcaption>
 
                 </figure>
