--- a/html00/pagina08.html
+++ b/html00/pagina08.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina 08</title>
-    <link rel="stylesheet" href="estilos.css">
+    <title>Página 08</title>
+    <link rel="stylesheet" href="estilosP08.css">
 </head>
 
 <body>
