--- a/html00/pagina10.html
+++ b/html00/pagina10.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página con módulos</title>
+    <title>Página 10 con módulos</title>
 </head>
 <body>
     <div id="app"></div>
